--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -13,13 +13,13 @@
 
     <div id="emails-view"></div>
 
-    <div id="email-detail"></div>
+    <div id="detail-view"></div>
 
     <div id="compose-view">
         <h3>New Email</h3>
         <form id="compose-form">
             <div class="form-group">
-                From: <input disabled class="form-control" value="{{ request.user.email }}">
+                From: <input id="compose_sender" disabled class="form-control" value="{{ request.user.email }}">
             </div>
             <div class="form-group">
                 To: <input id="compose-recipients" class="form-control">
